# openscribe

./: .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: documents.py  reading.py  study.py  writing.py
backend/app/models/: database.py  models.py
demo/: tts-sync-demo.html
frontend/: package.json
schemas/: kesx-schema.json
static/: index.html  manifest.json  sw.js
static/css/: main.css
static/js/: annotations.js  reader.js  storage.js  writing.js
