[project]
name = "openscribe"
version = "0.1.0"
description = "Self-hosted literacy platform backend"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "AGPL-3.0-only"}

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.18",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "celery>=5.4.0",
    "redis>=5.2.0",
    "pymupdf>=1.25.0",
    "pandoc>=2.4",
    "marker-pdf>=1.6.0",
    "paddleocr>=3.1.0",
    "surya-ocr>=0.10.0",
    "piper-tts>=1.2.0",
    "edge-tts>=6.1.0",
    "httpx>=0.28.0",
    "aiofiles>=24.0.0",
    "python-docx>=1.1.0",
    "Pillow>=10.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
